tests/spec/parse/snapshots/pub_interface.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  pub interface Printable { fn print(self); }
---
[
    Interface {
        doc: None,
        name: "Printable",
        name_span: Span {
            file_id: 0,
            byte_offset: 15,
            byte_length: 9,
        },
        generics: [],
        parents: [],
        method_signatures: [
            Function {
                doc: None,
                attributes: [],
                name: "print",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 30,
                    byte_length: 5,
                },
                generics: [],
                params: [
                    Binding {
                        pattern: Identifier {
                            identifier: "self",
                            span: Span {
                                file_id: 0,
                                byte_offset: 36,
                                byte_length: 4,
                            },
                            binding: None,
                        },
                        annotation: None,
                        ty: Var {
                            id: uninferred,
                        },
                    },
                ],
                return_annotation: Unknown,
                return_type: Var {
                    id: uninferred,
                },
                visibility: Private,
                body: Declaration,
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 30,
                    byte_length: 11,
                },
            },
        ],
        visibility: Public,
        span: Span {
            file_id: 0,
            byte_offset: 5,
            byte_length: 39,
        },
    },
]
