tests/spec/parse/snapshots/pub_type_alias.snap
---
source: tests/spec/parse/mod.rs
description: "input: \npub type Id = int;\n"
---
[
    TypeAlias {
        doc: None,
        attributes: [],
        name: "Id",
        name_span: Span {
            file_id: 0,
            byte_offset: 10,
            byte_length: 2,
        },
        generics: [],
        annotation: Constructor {
            name: "int",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 15,
                byte_length: 3,
            },
        },
        ty: Var {
            id: uninferred,
        },
        visibility: Public,
        span: Span {
            file_id: 0,
            byte_offset: 5,
            byte_length: 13,
        },
    },
]
