tests/spec/parse/snapshots/range_from.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() { for i in 0.. { break; } }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    For {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "i",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 17,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        iterable: Range {
                            start: Some(
                                Literal {
                                    literal: Integer {
                                        value: 0,
                                        text: None,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 22,
                                        byte_length: 1,
                                    },
                                },
                            ),
                            end: None,
                            inclusive: false,
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 22,
                                byte_length: 3,
                            },
                        },
                        body: Block {
                            items: [
                                Break {
                                    value: None,
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 28,
                                        byte_length: 5,
                                    },
                                },
                            ],
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 26,
                                byte_length: 10,
                            },
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 13,
                            byte_length: 23,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 27,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 37,
        },
    },
]
