tests/spec/parse/snapshots/range_precedence_with_arithmetic.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() { let r = 0..1 + 2; }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "r",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 17,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Range {
                            start: Some(
                                Literal {
                                    literal: Integer {
                                        value: 0,
                                        text: None,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 21,
                                        byte_length: 1,
                                    },
                                },
                            ),
                            end: Some(
                                Binary {
                                    operator: Addition,
                                    left: Literal {
                                        literal: Integer {
                                            value: 1,
                                            text: None,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 24,
                                            byte_length: 1,
                                        },
                                    },
                                    right: Literal {
                                        literal: Integer {
                                            value: 2,
                                            text: None,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 28,
                                            byte_length: 1,
                                        },
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 24,
                                        byte_length: 5,
                                    },
                                },
                            ),
                            inclusive: false,
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 21,
                                byte_length: 8,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 13,
                            byte_length: 16,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 21,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 31,
        },
    },
]
